Varia: Fix vertically stretched images

--- a/varia/sass/blocks/image/_style.scss
+++ b/varia/sass/blocks/image/_style.scss
@@ -11,7 +11,8 @@
 }
 
 img {
-	width: auto;
-	vertical-align: middle;
+	height: auto;
 	max-width: 100%;
+	vertical-align: middle;
+	width: auto;
 }
